# medical-distill

./: .gitignore  README.md  pyproject.toml
configs/: eval.ade.example.json  eval.llama31.ade.example.json  eval.vertex_llama33_to_llama31.ade.example.json  eval.vertex_llama33_to_llama31.ade.json  eval.vertex_llama33_to_llama31.ade.v2.json  filter.ade.example.json  filter.llama31.ade.example.json  filter.vertex_llama33.ade.example.json  filter.vertex_llama33.ade.json  filter.vertex_llama33.ade.v2.json  gcs_upload.vertex_tuning.example.json  generation.ade.example.json  generation.llama31.ade.example.json  generation.vertex_llama33.ade.example.json  generation.vertex_llama33.ade.json  generation.vertex_llama33.ade.smoke.json  generation.vertex_llama33.ade.v2.json  predict.gcp.llama31.student.example.json  predict.gcp.llama31.student.json  predict.gcp.llama31.student.v2.json  predict.llama31.student.example.json  prepare_sft.ade.example.json  prepare_sft.llama31.ade.example.json  prepare_sft.vertex_llama33_to_llama31.ade.example.json  prepare_sft.vertex_llama33_to_llama31.ade.json  prepare_sft.vertex_llama33_to_llama31.ade.v2.json  prepare_vertex_tuning.llama31.example.json  train.gcp.llama31.student.example.json  train.gcp.llama31.student.json  train.gcp.llama31.student.v2.json  train.llama31.student.example.json  train.student.example.json  vertex_tuning.llama31.student.example.json
evals/: ade_eval.jsonl  ade_eval_smoke.jsonl
ops/: create_gcp_train_vm.sh  gcp_train_vm_startup.sh  setup_gcp_vertex_cli.sh
outputs/: llama31_ade_eval_from_vertex_llama33_metrics.json  (+1 more)
(+20 files in other folders)
